--- a/productDesc.html
+++ b/productDesc.html
@@ -237,7 +237,7 @@
     display:flex; flex-wrap:wrap; gap:8px; list-style:none; margin:6px 0 0; padding:0; align-items:center; justify-content:flex-start;
   }
   .pdp-scope .icons-list__item{
-    width:50px; height:32px; display:flex; align-items:center; justify-content:center; border:1px solid #e5e5e5; background:#fff; line-height:0;
+    width:50px; height:32px; display:flex; align-items:center; justify-content:center; border:1px solid #e5e5e5; background:#fff;
   }
   .pdp-scope .payment-icon{
     height:18px; width:auto; display:block;
